# discord-ws

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-docs.yml  pyright-lint.yml  python-test.yml
docs/: changelog.rst  conf.py  index.rst
examples/: listen.py  presence.py
src/discord_ws/: __init__.py  __main__.py  constants.py  errors.py  http.py  intents.py  metadata.py
src/discord_ws/client/: __init__.py  backoff.py  client.py  constants.py  errors.py  events.py  heartbeat.py  stream.py
src/discord_ws/types/: __init__.py  activities.py  presences.py  statuses.py
tests/: __init__.py  conftest.py
tests/client/: test_client.py  test_heart.py
tests/mocks/: __init__.py  client.py  websockets.py
