[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-ws"
description = "A bare-bones asynchronous Python wrapper for the Discord Gateway API."
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=11.0.3",
]

[project.urls]
Homepage = "https://github.com/thegamecracks"

[tool.setuptools.dynamic]
version = { attr = "discord_ws.__version__" }
