[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-ws"
description = "A bare-bones asynchronous Python wrapper for the Discord Gateway API."
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=11.0.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/thegamecracks/discord-ws"

[project.optional-dependencies]
tests = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
]

[tool.setuptools.dynamic]
version = { attr = "discord_ws.__version__" }

[tool.coverage.run]
branch = true
source_pkgs = ["discord_ws"]
omit = ["src/discord_ws/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
    "\\s*\\.\\.\\.$",
    "raise NotImplementedError",
    "def __repr__",
]
include_namespace_packages = true
